# TakeNoteAI

./: .gitignore  GUIDE_EXTRACTION_MOTS_CLES.md  GUIDE_MAC_M4_OPTIMIZATION.md  GUIDE_NETTOYAGE_RAG.md  GUIDE_SPEECHBRAIN.md  GUIDE_WORKFLOW_COMPLET.md  MODEL_INFO.md  README.md  README_ADVANCED.md  README_ANALYZER.md  RESUME_MOTS_CLES.md  RESUME_OPTIMISATIONS_M4.md  RESUME_PROJET.md  SPEAKER_DETECTION_GUIDE.md  WORKFLOW_COMPLET.md  advanced_rag_transcription.py  advanced_rag_transcription_m4_optimized.py  ai_keyword_guided_correction.py  analyze_audio_question.py  analyze_json_output.py  apply_transcription_fixes.py  ask_audio.py  audio_cleaner.py  audio_converter.py  audio_summarizer.py  audio_transcriber.py  benchmark_m4_performance.py  check_files.py  clean_rag_data.py  demo_questions.py  demo_rag.py  detect_m4_capabilities.py  detect_transcription_errors.py  disable_speechbrain.py  download_whisper_medium.py  download_whisper_model.py  explain_file_differences.py  explain_quality_score.py  export_embeddings.py  extract_keywords_from_embeddings.py  (+56 more)
.cursor/rules/: analysis-scripts.mdc  data-management.mdc  keyword-extraction.mdc  project-structure.mdc  python-optimization.mdc  rag-workflow.mdc  transcription-models.mdc  troubleshooting.mdc
doc/: GUIDE_ACCUMULATION_FINAL.md  GUIDE_ACCUMULATION_RAG.md  GUIDE_AFFICHAGE.md  GUIDE_FILTRAGE_MOTS_CLES.md  GUIDE_FINAL.md  GUIDE_FINAL_SCRIPTS.md  GUIDE_MOTS_CLES.md  GUIDE_RESUMES.md  GUIDE_TRANSCRIPTION_RESUME.md  GUIDE_UTILISATION_M4.md
